unpackaged/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>if(LEN(Unitno__c)&gt;0, Unitno__c + "/" , "" ) &amp;
if(LEN(Number__c)&gt;0, Number__c&amp; " " , "") &amp;
if(LEN(Street__c)&gt;0, Street__c&amp; " " , "" ) &amp;
if(LEN(City__c)&gt;0, TEXT(StreetType__c)&amp; ", " , "" ) &amp; BR() &amp;
if(LEN(City__c)&gt;0, City__c&amp; ", " , "" )&amp;
if(LEN(TEXT(State__c))&gt;0, TEXT(State__c)&amp; " " , "" )&amp;
if(LEN(PostalCode__c)&gt;0, PostalCode__c,"") &amp; BR() &amp;
If(LEN(TEXT(Country__c)) &gt;0, TEXT(Country__c),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>