unpackaged/main/default/objects/Property__c/fields/AmendedBaths__c.field-meta.xml
<CustomField>
    <fullName>AmendedBaths__c</fullName>
    <label>Amended Baths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>