unpackaged/main/default/objects/Property__c/fields/AmendedBeds__c.field-meta.xml
<CustomField>
    <fullName>AmendedBeds__c</fullName>
    <label>Amended Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>