unpackaged/main/default/objects/Property__c/fields/AmendedCarSpaces__c.field-meta.xml
<CustomField>
    <fullName>AmendedCarSpaces__c</fullName>
    <label>Amended CarSpaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>