unpackaged/main/default/objects/Property__c/fields/CarSpaces__c.field-meta.xml
<CustomField>
    <fullName>CarSpaces__c</fullName>
    <label>Original CarSpaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>