unpackaged/main/default/objects/Property__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
                <default>true</default>
                <label>Australia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>