unpackaged/main/default/objects/Property__c/fields/CurrentLVR__c.field-meta.xml
<CustomField>
    <fullName>CurrentLVR__c</fullName>
    <formula>( Application__r.CL_Contract__r.CurrentLoanBalance__c /  PropertyMarketValue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>