unpackaged/main/default/objects/Property__c/fields/EstimatedPropertyValue__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPropertyValue__c</fullName>
    <label>Estimated Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>