unpackaged/main/default/objects/Property__c/fields/ExpectedNetMonthlyRentalIncome__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNetMonthlyRentalIncome__c</fullName>
    <label>Expected Net Monthly Rental Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>