unpackaged/main/default/objects/Property__c/fields/isCalculatedLandArea__c.field-meta.xml
<CustomField>
    <fullName>isCalculatedLandArea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculated Land Area</label>
    <type>Checkbox</type>
</CustomField>