unpackaged/main/default/objects/Property__c/fields/LastValuationTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>LastValuationTimeStamp__c</fullName>
    <label>Last Valuation Time Stamp</label>
    <type>DateTime</type>
</CustomField>