unpackaged/main/default/objects/Property__c/fields/MixedUseProperty__c.field-meta.xml
<CustomField>
    <fullName>MixedUseProperty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mixed-Use Property</label>
    <type>Checkbox</type>
</CustomField>