unpackaged/main/default/objects/Property__c/fields/OriginalLandAreaSource__c.field-meta.xml
<CustomField>
    <fullName>OriginalLandAreaSource__c</fullName>
    <label>Original Land Area Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>