unpackaged/main/default/objects/Property__c/fields/OriginalLockUpGarages__c.field-meta.xml
<CustomField>
    <fullName>OriginalLockUpGarages__c</fullName>
    <label>Original LockUp Garages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>