unpackaged/main/default/objects/Property__c/fields/OriginalPropertyValuation_Type__c.field-meta.xml
<CustomField>
    <fullName>OriginalPropertyValuation_Type__c</fullName>
    <label>Original Property Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVM</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>