unpackaged/main/default/objects/Property__c/fields/OriginalPropertyValue__c.field-meta.xml
<CustomField>
    <fullName>OriginalPropertyValue__c</fullName>
    <description>Field to be used for Pool Cut Reporting</description>
    <label>Original Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>