unpackaged/main/default/objects/Property__c/fields/PropertyMarketValue__c.field-meta.xml
<CustomField>
    <fullName>PropertyMarketValue__c</fullName>
    <label>Property Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>