unpackaged/main/default/objects/Property__c/fields/PropertyPurpose__c.field-meta.xml
<CustomField>
    <fullName>PropertyPurpose__c</fullName>
    <label>Property Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live In</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>