unpackaged/main/default/objects/Property__c/fields/Renovations__c.field-meta.xml
<CustomField>
    <fullName>Renovations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renovations</label>
    <type>Checkbox</type>
</CustomField>