unpackaged/main/default/objects/Property__c/fields/RentalIncomeFrequency__c.field-meta.xml
<CustomField>
    <fullName>RentalIncomeFrequency__c</fullName>
    <label>Rental Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>