unpackaged/main/default/objects/Property__c/fields/StreetNoandStreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetNoandStreetName__c</fullName>
    <formula>if(LEN(Number__c)&gt;0, Number__c&amp; " " , "") &amp;
if(LEN(Street__c)&gt;0, Street__c&amp; " " , "" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street No and Street Name</label>
    <type>Text</type>
</CustomField>