unpackaged/main/default/objects/Property__c/fields/StreetType__c.field-meta.xml
<CustomField>
    <fullName>StreetType__c</fullName>
    <label>Street Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StreetType</valueSetName>
    </valueSet>
</CustomField>