unpackaged/main/default/objects/Property__c/fields/Totalspentonrenovations__c.field-meta.xml
<CustomField>
    <fullName>Totalspentonrenovations__c</fullName>
    <label>Total spent on renovations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>