unpackaged/main/default/objects/Property__c/fields/ValuationType__c.field-meta.xml
<CustomField>
    <fullName>ValuationType__c</fullName>
    <description>Most Recent Property Valuation Type</description>
    <label>Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVM</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>