unpackaged/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Address__c</columns>
    <columns>ValuationStatus__c</columns>
    <columns>ValuationType__c</columns>
    <columns>PropertyMarketValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>